--- a/src/component/Sidebar.scss
+++ b/src/component/Sidebar.scss
@@ -1,8 +1,10 @@
-.Sidebar {
+.SideBar {
     flex: 1;
     //border-right: 0.5px solid rgb(230, 227, 227);
     min-height: 100vh;
-    background-color: #1f90ce;
+    width: 35vh;
+    border-color: #161612;
+    background-color: #ffffe0;
   
     .top {
       height: 50px;
@@ -10,11 +12,35 @@
       align-items: center;
       justify-content: center;
     }
+
+    .logo {
+      font-size: 25px;
+      font-weight: bold;
+      padding-top: 50px;
+      padding-left: 20px;
+      
+      //color: #7451f8;
+      color: #690404;
+      font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+    .chtbtn{
+            width: 150px;
+            font-size: large;
+            padding: 10px;
+            border: none;
+            background-color: #ffff00;
+            color:#0c0c0c;
+            font-weight: bold;
+            cursor: pointer;
+            overflow: hidden;
+            border-radius: 10px;
+            margin-top: 25px;
+    }
   
     
     .center {
-      padding-left: 10px;
-      padding-top: 10px;
+      padding-left: 20px;
+      padding-top: 15px;
   
       ul {
         list-style: none;
@@ -22,32 +48,29 @@
         padding: 0;
   
         .title {
-          font-size: 10px;
+          font-size: 20px;
           font-weight: bold;
-          color: #fff;
-          margin-top: 15px;
-          margin-bottom: 5px;
+          color: rgb(0, 0, 0);
+          margin-top: 35px;
+          padding-top:15px;
+          padding-left: 20px;
+          margin-bottom: 25px;
+          font-family: Georgia, 'Times New Roman', Times, serif;
         }
   
         li {
           display: flex;
           align-items: center;
           padding: 5px;
-          cursor: pointer;
+          
   
-          &:hover {
-            background-color: #0085cc;
-          }
+         
   
-          .icon {
-            font-size: 18px;
-            color: #ccc;
-          }
-  
+          
           span{
               font-size: 13px;
               font-weight: 600;
-              color: #ccc;
+              
               margin-left: 10px;
           }
         }
