--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -2,18 +2,19 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    height: 150px;
-    background-color: rgb(209, 231, 231);
+    height: 80px;
+    border-bottom: solid rgb(218, 206, 206);
+    box-shadow: 1rem rgb(53, 51, 51);
+    background-color: rgba(226, 233, 233, 0.705);
 }
 
 .titleContainer{
     width: 50%;
-    background-color: aqua;
+    border-right: solid rgb(214, 212, 212);
 }
 
 .actionContainer{
     width: 50%;
-    background-color: bisque;
 }
 
 .tabBarContainer{
@@ -21,6 +22,10 @@
     flex-wrap: wrap;
     width: 100%;
     height: 100px;
-    background-color: rgb(209, 231, 231);
+    background-color: rgb(1, 29, 29);
+}
+
+.pageTitle{
+    text-align: center;
 }
 
