--- a/src/pages/feedback/FeedbackStyles.css
+++ b/src/pages/feedback/FeedbackStyles.css
@@ -1,21 +1,44 @@
 
 .fullContainer{
-    height: 100vh;
-    width: 100vw;
-    background-color: cornflowerblue;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.98);
+}
+
+.sideBar{
+    width: 20%;
+    height: 100%;
+    position: fixed;
+    background-color: rgb(201, 198, 198);
+}
+
+.leftContainer{
+    width: 80%;
+    height: 100%;
+    margin-left: 20%;
 }
 
 .detailContainer{
     height: fit-content;
     width: 100%;
-    background-color: blueviolet;
+}
+
+.detailTable{
+    margin: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
 }
 
 .dataRow{
-    width: 100%;
+    padding: 2rem;
     display: flex;
     flex-wrap: wrap;
-    border: solid red 1px;
     justify-content: space-around;
+    border-bottom: solid rgb(66, 61, 61) ;
 }
 
