--- a/src/pages/feedback/FeedbackStyles.css
+++ b/src/pages/feedback/FeedbackStyles.css
@@ -1,40 +1,22 @@
-
-.fullContainer{
-    height: 100%;
+.full-container{
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    position: absolute;
+    height: 100%;
     background-color: rgba(255, 255, 255, 0.98);
 }
 
-.sideBar{
-    width: 20%;
-    height: 100%;
-    position: fixed;
-    background-color: rgb(201, 198, 198);
-}
-
-.leftContainer{
-    width: 80%;
-    height: 100%;
-    margin-left: 20%;
-}
-
-.detailContainer{
+.detail-container{
     height: fit-content;
     width: 100%;
 }
 
-.detailTable{
+.detail-table{
     margin: 30px;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
 }
 
-.dataRow{
+.data-row{
     padding: 2rem;
     display: flex;
     flex-wrap: wrap;
