--- a/src/pages/feedback/FeedbackStyles.css
+++ b/src/pages/feedback/FeedbackStyles.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.98);
+    
 }
 
 .detail-container{
@@ -14,6 +15,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 80%;
+    border-color: #E0E0E0;
 }
 
 .data-row{
