--- a/src/pages/feedback/FeedbackStyles.css
+++ b/src/pages/feedback/FeedbackStyles.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.98);
-    
+    font-family: "Poppins";
 }
 
 .detail-container{
@@ -14,15 +14,43 @@
     margin: 30px;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
-    border-color: #E0E0E0;
+    width: 90%;
+
+ 
 }
 
 .data-row{
     padding: 2rem;
     display: flex;
+    font-family: "Poppins";
     flex-wrap: wrap;
     justify-content: space-around;
-    border-bottom: solid rgb(66, 61, 61) ;
+    border-bottom: solid #E0E0E0 ;
+    height: 5px;
+}
+
+.menu{
+    border-radius: 20px;
+    background-color: #FFE662;
+    border-style: calc();
+    border-color: #FFE662;
+    width: 100px;
+    height: 30px;
+    font-family: "Poppins";
+    box-shadow: none;
+   
+    
+}
+.starIcon{
+    color: #FFE662;
+    margin-right: 10px;
+}
+
+.user{
+    color: #565656;
+}
+
+.rating{
+    color: #666666;
 }
 
