--- a/src/pages/feedback/FeedbackStyles.css
+++ b/src/pages/feedback/FeedbackStyles.css
@@ -23,40 +23,89 @@
     font-family: "Poppins";
     flex-wrap: wrap;
     justify-content: space-around;
+    vertical-align:middle; 
     border-bottom: solid #E0E0E0 ;
-    height: 5px;
+    border-bottom-width:2px ;
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+    
 }
 
 
 .starIcon{
     color: #FFE662;
-    margin-right: 10px;
+    width: 50px;
+    height: 20px;
+    align-items: center;
 }
 
 .user{
-    color: #565656;  
+    color: #565656; 
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: center;
+ 
 }
 
 .description{
     max-width:600px;
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0em;
+    text-align: center;
+
 }
 
 .rating{
     color: #666666;
+    align-items: center;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: right;
+
+    
 }
 
 .menu{
     border-radius: 20px;
-    background-color: #FFE662;
+    background-color: #FFE66299;
+    ;
     border-style: none;
-    width: 100px;
-    height: 30px;
+    width: 150px;
+    height: 40px;
     font-family: "Poppins";
+    font-weight: 500;
     display:flex;
     align-items:center; 
     display:table-cell; 
     vertical-align: middle; 
     justify-content:center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: center;
+
+}
+
+.date{
+    font-family: Poppins;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: center;
+
 }
 
 
