--- a/src/component/Sidebar.scss
+++ b/src/component/Sidebar.scss
@@ -4,7 +4,8 @@
           min-height: 100vh;
           width: 35vh;
           border-color: #161612;
-          background-color: #f2f3aecc;
+          background-color: #FFFFFFCC;
+          ;
           ;
           
 
@@ -15,39 +16,13 @@
           justify-content: center;
          }
 
-    .logo {
-          font-size: 25px;
-          font-weight: bold;
-          margin-top: 100px;
-          padding-left: 20px;
-          color: #630A10;
-          padding-bottom: 50px;
-          font-family: "Poppins";
-          font-size: 24px;
-          font-weight: 600;
-          line-height: 36px;
-          letter-spacing: 0em;
-          text-align: center;
-
-          }
-    .chtbtn{
-          width: 150px;
-          font-size: large;
-          padding: 10px;
-          border: none;
-          background-color: #ffff00;
-          color:#0c0c0c;
-          font-weight: bold;
-          cursor: pointer;
-          overflow: hidden;
-          border-radius: 10px;
-          margin-top: 25px;
-          }
+    
+    
 
   
     .center {
-          padding-left: 20px;
-          padding-top: 15px;
+          padding-left: 45px;
+          padding-top: 35px;
 
     ul {
           list-style: none;
@@ -57,31 +32,41 @@
     .title {
      
       color: #2B2B2B;
-      margin-top: 30px;
+      margin-top: 40px;
       font-family: 'Poppins';
       font-size: 17px;
       font-weight: 600;
       line-height: 30px;
       letter-spacing: 0em;
       text-align: left;
+      padding-left: 40px;
+
+
+      &:hover {
+            background-color:#FFE66299;
+            height: 40px;
+            width: 150px;
+            left: 37px;
+            top: 150px;
+            border-radius: 10px;
+           
+
+          }
+  
      
       }
 
-      .title :hover:not(.active) {
-        background-color: #ffffff;
-        color: #dd1d5e;
-    }
+      
 
       li {
         display: flex;
         align-items: center;
-        padding: 5px;
         
 
       span{
             font-size: 13px;
             font-weight: 600;
-            margin-left: 10px;
+            //margin-left: 10px;
         }
       }
     }
@@ -89,3 +74,26 @@
 
   
 }
+
+.logo {
+      font-size: 25px;
+      font-weight: bold;
+      margin-top: 100px;
+     
+      padding-left: 10px;
+      color: #630A10;
+      padding-bottom: 50px;
+      font-family: "Poppins";
+      font-size: 24px;
+      font-weight: 600;
+      line-height: 36px;
+      letter-spacing: 0em;
+      text-align: center;
+
+      }
+
+      @media only screen and (max-width: 720px) {
+            html {
+              overflow: hidden;
+            }
+          }
