--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -4,8 +4,9 @@
 }
 
 .cardContainer{
-    height: 40px;
+    height: auto;
     width: 60%;
+    padding: 1%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 1rem;
@@ -13,10 +14,9 @@
     background-color: rgb(248, 225, 229);
 }
 
-.expandCard{
-    height: auto;
-    width: 60%;
-    float: right;
-    padding: 2rem;
-    background-color: rgb(143, 156, 156);
+.menu-card-header{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    background-color: antiquewhite;
 }
