--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -1,6 +1,6 @@
 .container{
     display: flex;
-    flex-wrap: wrap;
+    box-sizing: border-box;
     width: 100%;
     height: 80px;
     border-bottom: solid rgb(218, 206, 206);
@@ -8,12 +8,12 @@
     background-color: rgba(226, 233, 233, 0.705);
 }
 
-.titleContainer{
+.title-container{
     width: 50%;
     border-right: solid rgb(214, 212, 212);
 }
 
-.actionContainer{
+.action-container{
     width: 50%;
 }
 
@@ -25,7 +25,15 @@
     background-color: rgb(231, 233, 233);
 }
 
-.pageTitle{
+.page-title{
     text-align: center;
+}
+
+.button-container{
+    height: 3rem;
+    width: 10rem;
+    background-color: yellow;
+    color: black;
+    float: right;
 }
 
