--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -42,4 +42,13 @@
 
 .add-menu-container{
     display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+}
+
+.add-menu-row-item{
+    height: 2rem;
+    width: 10rem;
+    margin-left: 1rem;
+    overflow: hidden;
 }
