--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -42,7 +42,6 @@
 
 .add-menu-container{
     display: flex;
-    flex-wrap: wrap;
     box-sizing: border-box;
 }
 
@@ -51,4 +50,9 @@
     width: 10rem;
     margin-left: 1rem;
     overflow: hidden;
+}
+
+.add-menu-row{
+    width: 30%;
+    
 }
