--- a/src/pages/winner/WinnerStyles.css
+++ b/src/pages/winner/WinnerStyles.css
@@ -1,10 +1,20 @@
 .form-label{
     font-size: 16px;
     padding-top: 1vw;
+    margin-bottom: 20px;
+    margin-top:  35px;;
 }
 
 .form-input{
-    width: 20vw;
+    height: 25px;
+    width: 227px;
+    left: 210px;
+    top: 0px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    margin-top:  35px;;
+    margin-left: 100px;
+
 }
 
 .form-input-file-background{
@@ -15,3 +25,22 @@
     margin-left: auto;
     margin-right: auto;
 }
+.btn{
+    background-color: #FFE662;
+    height: 35px;
+    width: 130px;
+    border-style: hidden;
+    border-radius: 30px;
+    font-family: Poppins;
+    font-style: Bold;
+    margin-top: 80px;
+    margin-left: 700px;
+}
+
+
+@media screen and (min-width: 500px) {
+    
+    .full-container {
+        margin-left: 10px; 
+        margin-bottom: 10px;}
+  }
