--- a/src/pages/winner/WinnerStyles.css
+++ b/src/pages/winner/WinnerStyles.css
@@ -2,7 +2,8 @@
     font-size: 16px;
     padding-top: 1vw;
     margin-bottom: 20px;
-    margin-top:  35px;;
+    margin-top:  35px;
+    font-weight: bold;
 }
 
 .form-input{
@@ -32,7 +33,7 @@
     border-style: hidden;
     border-radius: 30px;
     font-family: Poppins;
-    font-style: Bold;
+    font-weight: bold;
     margin-top: 80px;
     margin-left: 700px;
 }
