--- a/src/pages/feedback/FeedbackStyles.css
+++ b/src/pages/feedback/FeedbackStyles.css
@@ -107,6 +107,11 @@
     text-align: center;
 
 }
+.feedback-show-menu{
+    height: 400px;
+    width: 100%;
+    background-color: #f5eab8;
+}
 
 
 
