--- a/src/pages/feedback/FeedbackStyles.css
+++ b/src/pages/feedback/FeedbackStyles.css
@@ -4,7 +4,7 @@
 
 .detail-container{
     height: fit-content;
-    width: 100%;
+    width: 80%;
 }
 
 .detail-table{
@@ -22,6 +22,11 @@
     border-bottom: solid #E0E0E0 ;
     border-bottom-width:2px ;
     align-items: center;
+}
+
+.title{
+    align-items: center;
+    margin-left: 10px;
 }
 
 .starIcon{
