--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -56,3 +56,29 @@
     width: 30%;
     
 }
+
+.menu-detail-content{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.menu-detail-list{
+    height: auto;
+    width: 30%;
+    background-color: rgb(236, 241, 219);
+}
+
+.menu-detail-list-title{
+    display: flex;
+    justify-content:space-between;
+    width: 100%;
+    background-color: rgb(239, 241, 116);
+    border-radius: 8px;
+}
+
+.menu-list-add-input{
+    display: flex;
+    justify-content: space-between;
+}
