--- a/src/pages/order/OrderStyles.css
+++ b/src/pages/order/OrderStyles.css
@@ -30,14 +30,19 @@
 }
 
 .modal-menu-content-card{
-    margin-left: 5px;
+    margin: 25px 0px 0px 15px;
     flex-shrink: 0;
     background-color: antiquewhite;
     border-radius: 10px;
-    padding: 4%;
+    padding: 2%;
+    width: 90%;
 }
 
 .modal-header-chat{
     float: right;
 }
 
+.modal-menu-content-card-column-element{
+    display: flex;
+    justify-content: space-around;
+}
