--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -67,15 +67,33 @@
 .menu-detail-list{
     height: auto;
     width: 30%;
-    background-color: rgb(236, 241, 219);
+    background-color: #ffffff;
+    
+}
+
+.menu-detail-list-add{
+    height: 44px;
+    width: 312px;
+    left: 13px;
+    top: 221px;
+    border-style: none;
+    border-radius: 20px;
+
 }
 
 .menu-detail-list-title{
     display: flex;
     justify-content:space-between;
     width: 100%;
-    background-color: rgb(239, 241, 116);
-    border-radius: 8px;
+    background-color: #FFEF9C;
+    border-radius: 20px;
+    padding-left: 15px;
+
+}
+
+.menu-detail-list-title-icon{
+    padding-top: 15px;
+    padding-right: 10px;
 }
 
 .menu-list-add-input{
@@ -110,4 +128,31 @@
 }
 .menu-detail-list-item-trash:hover{
     opacity: 1;
+}
+
+hr {
+    margin: 20px 0px 20px;
+    color: blue;
+    
+  }
+
+.menu-tab-bar-btn{
+    height: 36px;
+    width: 86px;
+    left: 0px;
+    top: 10px;
+    border-radius: 5px;
+    background-color:#FFFFFF ;
+    margin-right: 20px;
+    border-style: none;
+    font-family: Poppins;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 27px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
+.menu-tab-bar-btn:focus {     
+    background-color:#FFEF9C;    
 }
