--- a/src/pages/promotion/PromotionStyles.css
+++ b/src/pages/promotion/PromotionStyles.css
@@ -42,6 +42,11 @@
     border-radius: 5px;
     cursor: pointer;
 }
+.apply-btn{
+    background-color: #fcd204;
+    font-weight: 600;
+    border: none;
+}
 
 .promotion-content-display-title-icon:hover{
     opacity: 0.7;
