--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -117,6 +117,7 @@
 
 .menu-detail-list-item-name{
     width: 90%;
+    color: rgb(77, 76, 76);
 }
 
 .menu-detail-list-item-name:hover + .menu-detail-list-item-trash {
@@ -125,6 +126,11 @@
 
 .menu-detail-list-item-trash{
     opacity: 0;
+    cursor: pointer;
+    height: 25px;
+    width: 25px;
+    background-color: rgb(248, 189, 240);
+    border-radius: 50%;
 }
 .menu-detail-list-item-trash:hover{
     opacity: 1;
@@ -151,8 +157,24 @@ hr {
     line-height: 27px;
     letter-spacing: 0em;
     text-align: center;
+    cursor: pointer;
 }
 
 .menu-tab-bar-btn:focus {     
     background-color:#FFEF9C;    
+}
+
+.menu-list-add-input-box{
+    height: 2rem;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 2px 2px rgb(156, 156, 156);
+    overflow: hidden;
+}
+
+.menu-list-add-input-box-add{
+    border: none;
+    background-color: transparent;
+    font-weight: 600;
+    cursor: pointer;
 }
