--- a/src/pages/order/OrderStyles.css
+++ b/src/pages/order/OrderStyles.css
@@ -78,4 +78,15 @@
     font-size: 15px;
     font-weight: 700;
     cursor: pointer;
+    display: flex;
+    justify-content: space-around;
+    width: 8rem;
+}
+
+.order-page-modal-header-chat-btn:hover {
+    opacity: 0.7;
+}
+
+.order-page-view-btn:hover{
+    opacity: 0.8;
 }
