--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -60,6 +60,7 @@
     border-radius: 10px;
     width: 5.5vw;
     color: rgb(173, 56, 2);
+    text-overflow: clip;
 }
 
 .side-bar-page-list-item:hover{
