--- a/src/pages/winner/WinnerStyles.css
+++ b/src/pages/winner/WinnerStyles.css
@@ -93,7 +93,7 @@
 
 /* Show Winner Styles */
 .show-winner-detail-content{
-    height: 100%;
+    height: 24rem;
     width: 100%;
     margin-top: 22%;
     margin-left: 30%;
