--- a/src/common/styles/CommonStyles.css
+++ b/src/common/styles/CommonStyles.css
@@ -1,7 +1,32 @@
 .full-container{
+    width: 80%; 
     background-color: rgba(255, 255, 255, 0.98);
     font-family: "Poppins";
-    width: 80%; 
+}
+
+.title-search-content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.action-bar{
+    display: flex;
+    justify-content: space-between;
+}
+
+.action-bar-btn{
+    border-radius: 5px;
+    background-color:#FFFFFF ;
+    border-style: none;
+    font-family: Poppins;
+    font-size: 15px;
+    font-weight: 500;
+    text-align: center;
+    cursor: pointer;
+}
+
+.action-bar-btn:focus {     
+    background-color:#FFEF9C;    
 }
 
 .detail-container{
