--- a/src/pages/order/OrderStyles.css
+++ b/src/pages/order/OrderStyles.css
@@ -2,18 +2,27 @@
     display: none;
   }
 
+ /* Order Modal Styles */
 .order-modal{
     position: absolute;
     height: auto;
-    width: 80%;
+    width: 65%;
     z-index: 1000;
     border-radius: 10px;
     padding: 2%;
-    background-color: rgb(255, 255, 255);
-    box-shadow: .5 .5 grey;
-    top: 20%;
-    left: 10%;
-    border: 2px solid black
+    background-color: rgb(255, 252, 236);
+    box-shadow: .5 .5 rgb(105, 104, 104);
+    transform-style: preserve-3d; /* Preserve 3D transformations */
+    transform: rotateY(60deg) translateZ(-200px); /* Initial 3D transformation */
+    animation: modal-anim 0.5s ease-in-out forwards; 
+}
+@keyframes modal-anim {
+  0% {
+    transform: rotateY(60deg) translateZ(-200px);
+  }
+  100% {
+    transform: rotateY(0deg) translateZ(0);
+  }
 }
 
 
@@ -37,8 +46,8 @@
 .modal-menu-content-card{
     margin: 25px 0px 0px 15px;
     flex-shrink: 0;
-    background-color: rgb(253, 242, 191);
-    border-radius: 10px;
+    border-radius: 6px;
+    border: 2px solid black;
     padding: 2%;
     width: 90%;
 }
@@ -58,7 +67,8 @@
 }
 
 .order-page-table-row{
-    display: flex
+    display: flex;
+    margin-top: 1rem;
 }
 
 .order-page-data-row{
@@ -73,23 +83,95 @@
 }
 
 .order-page-modal-header-chat-btn{
-    background-color: rgb(255, 230, 2);
+    display: inline-flex;
+    align-items: center;
+    background-color: #FFE662;
     float: right;
     border: none;
-    box-shadow: 1px 1px grey;
-    border-radius: 15px;
+    box-shadow: 1px 0.5px rgb(201, 200, 172);
+    border-radius: 6px;
     font-size: 15px;
     font-weight: 700;
     cursor: pointer;
-    display: flex;
-    justify-content: space-around;
-    width: 8rem;
+    padding: 0.6rem;
+    max-height: 4rem;
 }
 
 .order-page-modal-header-chat-btn:hover {
-    opacity: 0.7;
+    background-color:#f3d852;
 }
 
 .order-page-view-btn:hover{
-    opacity: 0.8;
+    color: rgb(119, 118, 116);
 }
+
+.order-total-sales-content{
+  display: inline-flex;
+  float: right;
+  justify-content: center;
+  align-items: center;
+}
+
+.sales-content-amount{
+  padding: 0.6rem;
+  background-color: #FFE662;
+  border-radius: 5px;
+  margin-left: 1rem;
+}
+
+/* Custom Checkbox creation */
+.checkbox-container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  .checkbox-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  .order-item-checkbox-checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: rgb(243, 241, 224);
+  }
+
+  .checkbox-container input:checked ~ .order-item-checkbox-checkmark {
+    background-color: #FFE662;
+  }
+  
+  .order-item-checkbox-checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  .checkbox-container input:checked ~ .order-item-checkbox-checkmark:after {
+    display: block;
+  }
+  
+  .checkbox-container .order-item-checkbox-checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid rgb(78, 78, 78);
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
