--- a/src/common/styles/CommonStyles.css
+++ b/src/common/styles/CommonStyles.css
@@ -29,6 +29,11 @@
     background-color:#FFEF9C;    
 }
 
+.user-action-bar-item{
+    margin-left: 2rem;
+    height: 2.6rem;
+}
+
 .detail-container{
     height: fit-content;
     width: 100%;
