--- a/src/pages/CommonStyles.css
+++ b/src/pages/CommonStyles.css
@@ -6,14 +6,12 @@
 
 /* Common header styles */
 .header-title-bar{
-    position: absolute;
-    height: 13%;
-    width: 75%;
-    top: 0;
+    height: 13vh;
+    width: 75vw;
     margin-left: .5rem;
     display: flex;
     justify-content: space-between;
-    border-bottom: solid grey .2rem;
+    border-bottom: solid grey .1rem;
 }
 
 .header-title-bar-text{
@@ -46,7 +44,7 @@
 }
 
 .header-add-button:hover{
-    opacity: 0.7;
+    background-color: #fcde48;
 }
 
 
