--- a/src/pages/feedback/FeedbackStyles.css
+++ b/src/pages/feedback/FeedbackStyles.css
@@ -132,7 +132,6 @@
 .feedback-order-detail-content-card{
     height: 200px;
     width: 40rem;
-    background-color: #f7ebbf;
     display: flex;
     justify-content: space-around;
     margin-left: auto;
@@ -145,7 +144,7 @@
     width:10rem;
     overflow-y: scroll;
     text-overflow: clip;
-    background-color: rgb(245, 234, 133);
+    background-color:#FFE66299;
 }
 .feedback-order-detail-content-card-menu-item{
     list-style: none;
