--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -6,12 +6,14 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    background-color: #fdeaa5;
+    background-color: rgb(255, 255, 255, 0.7);
     color:#000000;
     height: 100vh;
     width: 20%;
     position: fixed;
     overflow-y: scroll;
+    border-right: 1px solid black;
+    box-shadow: 10px 10px 54px -6px rgb(224, 200, 134);
 }
 
 .sidebar-logo-container{
@@ -44,13 +46,12 @@
     font-weight: 600;
     line-height: 36px;
     letter-spacing: 0em;
-    text-align: left;
-    color:#2b0b0b;
+    color:#2B2B2B;
     margin-left: 10px;
-}
-
-.side-bar-page-list-item{
-    padding: 0 1rem 0 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .side-bar-page-list-item a{
@@ -59,16 +60,16 @@
     padding: 0.5rem 3rem 0.5rem 1rem;
     border-radius: 10px;
     width: 5.5vw;
-    color: rgb(173, 56, 2);
+    color: #2B2B2B;
     text-overflow: clip;
 }
 
 .side-bar-page-list-item:hover{
-    opacity: 0.9;
+  
 }
 
 .active{
-    background-color: #fce058;
+    background-color: rgb(253, 233, 129);
     color: #685904;
     border-radius: 10px;
     box-shadow: 1px 1px rgb(187, 187, 187);
