--- a/src/common/styles/CommonStyles.css
+++ b/src/common/styles/CommonStyles.css
@@ -4,10 +4,39 @@
     font-family: "Poppins";
 }
 
+.detail-container{
+    height: fit-content;
+    width: 80%;
+    margin-right:50px;
+    padding-right: 50px;
+}
+
+.detail-table{
+    margin-right:50px;
+    width: 100%;
+}
+
 .title-search-content{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header-item-add-button{
+    padding: 0.4rem;
+    background-color: #FFE662;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 600;
+    color: rgb(49, 20, 20);
+    height: 3rem;
+}
+
+.header-item-add-button:hover{
+    background-color: #ecd24d;
 }
 
 .action-bar{
@@ -35,18 +64,104 @@
     height: 2.6rem;
 }
 
-.detail-container{
-    height: fit-content;
-    width: 100%;
-}
-
-.detail-table{
-    margin-right: auto;
-    width: 100%;
-}
 
 .detail-table-container{
     position: absolute;
     top: 20%;
     left: 25%;
 }
+
+
+/* Custom Checkbox creation */
+.checkbox-container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  .checkbox-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  .item-checkbox-checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: rgb(243, 241, 224);
+  }
+
+  .checkbox-container input:checked ~ .item-checkbox-checkmark {
+    background-color: #FFE662;
+  }
+  
+  .item-checkbox-checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  .checkbox-container input:checked ~ .item-checkbox-checkmark:after {
+    display: block;
+  }
+  
+  .checkbox-container .item-checkbox-checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid rgb(78, 78, 78);
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  /* Modal Styles */
+  .modal-content {
+    position: absolute;
+    height: auto;
+    width: 60%;
+    z-index: 10000;
+    border-radius: 10px;
+    padding: 2%;
+    background-color: rgb(250, 241, 183);
+    box-shadow: .5 .5 rgb(105, 104, 104);
+    transform-style: preserve-3d;
+    transform: rotateY(60deg) translateZ(-200px); 
+    animation: modal-anim 0.5s ease-in-out forwards; 
+  }
+  @keyframes modal-anim {
+    0% {
+      transform: rotateY(60deg) translateZ(-200px);
+    }
+    100% {
+      transform: rotateY(0deg) translateZ(0);
+    }
+  }
+  
+  .close {
+    color: #646363;
+    float: right;
+    font-size: 12px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
