--- a/src/pages/order/OrderStyles.css
+++ b/src/pages/order/OrderStyles.css
@@ -25,7 +25,7 @@
   }
 }
 
-
+/* 
 .modal-header{
     height: 5%;
     width: 100%;
@@ -64,7 +64,7 @@
     color: rgb(179, 178, 177);
     cursor: pointer;
     font-size: 16px;
-}
+} */
 
 .order-page-table-row{
     display: flex;
@@ -120,59 +120,3 @@
   margin-left: 1rem;
 }
 
-/* Custom Checkbox creation */
-.checkbox-container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  
-  .checkbox-container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
-  
-  .order-item-checkbox-checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: rgb(243, 241, 224);
-  }
-
-  .checkbox-container input:checked ~ .order-item-checkbox-checkmark {
-    background-color: #FFE662;
-  }
-  
-  .order-item-checkbox-checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  
-  .checkbox-container input:checked ~ .order-item-checkbox-checkmark:after {
-    display: block;
-  }
-  
-  .checkbox-container .order-item-checkbox-checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 5px;
-    height: 10px;
-    border: solid rgb(78, 78, 78);
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
