--- a/src/pages/user/User.css
+++ b/src/pages/user/User.css
@@ -9,33 +9,31 @@
     width: 100%;
 }
 
-.detail-table{
-    margin-right: auto;
+
+.user-page-table-row{
+    display: flex;
+    margin-top: 1rem;
+    border-bottom: 1px solid rgb(165, 164, 164);
     width: 100%;
 }
+
 
 .user-page-data-row{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    vertical-align:middle; 
-    border-bottom: solid #E0E0E0 ;
-    border-bottom-width:2px ;
-    align-items: center;
-    width: 100%;
-    padding: 0.4rem;
-}
-
-.user-page-data-row-data{
-    color: #8D8D8D; 
-    font-size: 16px;
-    font-weight: 500;
-    text-align: center;
+    font-size: 13px;
+    text-align: left;
     line-height: 2rem;
+    min-width: 25%;
 }
 
-.address{
-    text-overflow: hidden;
-    max-width: 50%;
+.user-page-data-row-data-threat-btn{
+    background-color: #D73316;
+    padding: 0.4rem;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.user-page-data-row-data-threat-btn:hover{
+    background-color: #b32c14;
 }
 
