--- a/src/common/styles/CommonStyles.css
+++ b/src/common/styles/CommonStyles.css
@@ -22,6 +22,13 @@
     align-items: center;
 }
 
+.header-title-bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: solid grey .1rem;
+}
+
 .header-item-add-button{
     padding: 0.4rem;
     background-color: #FFE662;
