--- a/src/pages/chat/ChatStyles.css
+++ b/src/pages/chat/ChatStyles.css
@@ -17,3 +17,20 @@
 .table-row{
     line-height: 2rem;
 }
+
+.chat-main-container{
+    height: auto;
+    width: 70vw;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 3rem;
+}
+
+.chat-card{
+    padding: 0.4rem;
+    border-radius: 4px;
+    background-color: #f8eba3;
+    font-size: 15px;
+    margin: 1rem;
+    width: calc(80% / 3)
+}
