--- a/src/components/SearchBarStyles.css
+++ b/src/components/SearchBarStyles.css
@@ -5,8 +5,8 @@
     align-items: center;
     justify-content: center;
   }
-  
-  input[type="text"] {
+
+  .search-bar-input{
     padding: 8px;
     border-radius: 4px;
     border: 1px solid #ccc;
