--- a/src/common/styles/CommonStyles.css
+++ b/src/common/styles/CommonStyles.css
@@ -1,7 +1,7 @@
 .full-container{
     width: 80%; 
     background-color: rgba(255, 255, 255, 0.98);
-    font-family: "Poppins";
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .detail-container{
