--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -41,7 +41,7 @@
 
 
 .side-bar-page-list{
-    font-family: Poppins;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 15px;
     font-weight: 600;
     line-height: 32px;
