--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -112,6 +112,7 @@
     justify-content: space-between;
     font-size: 14px;
     padding-top: 0.5rem;
+    margin: 0.3rem;
 }
 
 .menu-detail-list-item-name{
