order dinner page - updataed

--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -200,7 +200,7 @@ hr {
 }
 
 .special-menu-card{
-    height: 16rem;
+    height: auto;
     width: 28%;
     border-radius: 0px 6px 6px 6px;
     background-color: #fffdef;
