--- a/src/common/styles/CommonStyles.css
+++ b/src/common/styles/CommonStyles.css
@@ -63,6 +63,32 @@
     cursor: pointer;
 }
 
+.action-bar-btn-confirm{
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+  text-align: center;
+  cursor: pointer;
+  background-color:#004d00 ;
+  color:#FFFFFF ;
+  margin-right: 0.5rem;
+  padding: 0.4rem;
+}
+
+.action-bar-btn-cancel{
+  border: 2px solid #7E0A0A;
+  border-radius: 5px;
+  font-weight: 500;
+  text-align: center;
+  cursor: pointer;
+  color:#7E0A0A ;
+  padding: 0.3rem;
+}
+
+.action-bar-btn-confirm:focus{
+  background-color:#002200 ;
+}
+
 .action-bar-btn:focus {     
     background-color:#FFEF9C;    
 }
@@ -71,6 +97,7 @@
     margin-left: 2rem;
     height: 2.6rem;
 }
+
 
 
 .detail-table-container{
