--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -112,7 +112,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 14px;
-    padding-top: 0.5rem;
+    padding-top: 0.7rem;
     margin: 0.3rem;
 }
 
@@ -183,13 +183,18 @@ hr {
 .add-menu-item-form-label{
     min-width: 15rem;
     font-size: 14px;
-    padding: max(6rem);
+}
+
+.add-menu-item-field{
+    display: flex;
+    justify-content: start;
+    margin: 0.6rem;
 }
 
 #add-menu-item-form-input{
     width: 20rem;
-    margin-top: 1rem;
     height: 2rem;
+    text-overflow: ellipsis;
 }
 
 .special-menu-detail-content{
