--- a/src/pages/chat/ChatStyles.css
+++ b/src/pages/chat/ChatStyles.css
@@ -28,6 +28,7 @@
     width: 70vw;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     margin-left: 3rem;
 }
 
@@ -80,4 +81,18 @@
 
 .chat-reply-send-btn:hover{
     background-color:  #f0d957;
+}
+
+.single-chat-container{
+    height: 65%;
+    width: 50%;
+    position: absolute;
+    background-color: #fff5e0;
+}
+
+.chat-main-container-chat-item{
+    padding: 0.3rem;
+    background-color: #ffeea2;
+    border-radius: 4px;
+    margin:1rem;
 }
