--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -221,3 +221,22 @@ hr {
     padding: 0.3rem;
     font-size: 14px;
 }
+
+.food-item-img-container{
+    margin-top: 0.6rem;
+    margin-bottom: 0.5rem;
+    width: 6rem;
+    height: 6rem; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border: 1px solid #ccc;
+}
+
+.food-item-img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+  }
