--- a/src/pages/chat/ChatStyles.css
+++ b/src/pages/chat/ChatStyles.css
@@ -16,7 +16,7 @@
     width: 70vw;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+
     margin-left: 3rem;
 }
 
@@ -38,11 +38,14 @@
 }
 
 .chat-main-container-chat-item{
+    display: flex;
+    width: 28%;
     padding: 0.3rem;
     border-radius: 4px;
     margin:1rem;
     cursor: pointer;
-    width: 30%;
+    background-color: #fff7d1;
+
 }
 
 .chat-scroll-content{
