--- a/src/pages/chat/ChatStyles.css
+++ b/src/pages/chat/ChatStyles.css
@@ -44,7 +44,7 @@
     border-radius: 4px;
     margin:1rem;
     cursor: pointer;
-    background-color: #fff7d1;
+    background-color: #f3e190;
 
 }
 
