--- a/src/pages/menu/MenuStyles.css
+++ b/src/pages/menu/MenuStyles.css
@@ -209,16 +209,17 @@ hr {
     height: auto;
     width: 28%;
     border-radius: 0px 6px 6px 6px;
-    background-color: #fffdef;
+    background-color: #fcf9e3;
     margin: 1rem;
-    border: 2px solid black;
+    border: none;
     display: flex;
     flex-direction: column;
+    box-shadow: 1px 2px 2px 2px rgb(153, 153, 153);
 }
 
 .special-menu-card-item-text{
-    text-align: center;
-    padding: 0.3rem;
+    text-align: left;
+    padding: 0.1rem;
     font-size: 14px;
 }
 
