Order codes + styles changed

--- a/src/pages/order/OrderStyles.css
+++ b/src/pages/order/OrderStyles.css
@@ -75,7 +75,8 @@
 
 .order-page-data-row-description{
   width: 100%;
-  font-size: 12px;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .order-page-data-row-noted-btn{
